fix: some spacing moved from main-web-server to forms

--- a/styles/components/forms.css
+++ b/styles/components/forms.css
@@ -33,3 +33,13 @@
     display: inline-block;
   }
 }
+
+form > div {
+  margin-bottom: 15px;
+}
+
+.form__button-container--center {
+  display: flex;
+  justify-content: center;
+}
+
